--- a/wave-front/html/main/home.html
+++ b/wave-front/html/main/home.html
@@ -1,6 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- favicon -->
+    <link
+      rel="apple-touch-icon"
+      sizes="114x114"
+      href="/apple-icon-114x114.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="120x120"
+      href="/apple-icon-120x120.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="144x144"
+      href="/apple-icon-144x144.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="152x152"
+      href="/apple-icon-152x152.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/apple-icon-180x180.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="192x192"
+      href="/android-icon-192x192.png"
+    />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="57x57"
+      href="/image/favicon/apple-icon-57x57.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="60x60"
+      href="/image/favicon/apple-icon-60x60.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="72x72"
+      href="/image/favicon/apple-icon-72x72.png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="76x76"
+      href="/image/favicon/apple-icon-76x76.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="/image/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="96x96"
+      href="/image/favicon/favicon-96x96.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="/image/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="/image/favicon/manifest.json" />
+    <meta name="msapplication-TileColor" content="#ffffff" />
+    <meta
+      name="msapplication-TileImage"
+      content="/image/favicon/ms-icon-144x144.png"
+    />
+    <meta name="theme-color" content="#ffffff" />
+    <!-- favicon -->
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Home﹒Wvv</title>
@@ -18,6 +98,7 @@
       crossorigin="anonymous"
       defer
     ></script>
+
     <!-- Popper CDN srcs -->
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
@@ -32,12 +113,16 @@
       defer
     ></script>
 
-    <!-- Custom Sources -->
+    <!-- Custom CSS -->
     <link href="/css/background-style.css" rel="stylesheet" />
     <link href="/css/home-style.css" rel="stylesheet" />
     <link href="/css/alarm-style.css" rel="stylesheet" />
+    <link href="/css/new-post-style.css" rel="stylesheet" />
+
+    <!-- Custom JS -->
     <script src="/script/home.js" defer></script>
     <script src="/script/alarm.js" defer></script>
+    <script src="/script/newPost.js" defer></script>
   </head>
 
   <body class="wave water">
@@ -90,7 +175,11 @@
           ><img src="/image/home-btn-icon.svg" class="btn mx-4 nav-btn"
         /></a>
         <img src="/image/search-btn-icon.svg" class="btn mx-3 nav-btn" />
-        <img src="/image/post-btn-icon.svg" class="btn mx-3 nav-btn" />
+        <img
+          src="/image/post-btn-icon.svg"
+          id="new-post-btn"
+          class="btn mx-3 nav-btn"
+        />
         <img src="/image/message-btn-icon.svg" class="btn mx-3 nav-btn" />
         <img src="/image/my-btn-icon.svg" class="btn mx-3 nav-btn" />
       </div>
@@ -101,6 +190,7 @@
     <div class="wave water"></div>
     <div class="wave water"></div>
 
+    <!-- 알림 모달 -->
     <div id="alarm-modal" class="modal">
       <div class="modal-dialog modal-dialog-slideout modal-dialog-left">
         <div class="modal-container">
@@ -110,5 +200,36 @@
         </div>
       </div>
     </div>
+    <!-- 알림 모달 끝 -->
+
+    <!-- 새 포스트 작성 모달 -->
+    <div id="new-post-modal" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="new-post-modal-header">
+            <button type="button" id="recommend-music" class="btn">
+              링크로 음악 추천하기
+            </button>
+            <button type="button" id="upload-my-music" class="btn">
+              내 음악 추천하기
+            </button>
+          </div>
+          <div class="modal-body">
+            <!-- 모달 내용 -->
+            <div class="new-post-modal-container"></div>
+          </div>
+          <div class="new-post-modal-footer">
+            <button type="button" class="btn">
+              <img
+                id="new-post-upload-btn"
+                src="/image/new-post-upload-btn.gif"
+              />
+              <div>게시하기</div>
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--  새 포스트 작성 모달 끝-->
   </body>
 </html>
